--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,14 @@
 Package: Flury
 Type: Package
-Version: 0.1-2
+Version: 0.1-3
 Title: Data Sets from Flury, 1997
 Requires: MASS
 Date: 2007-10-08
 Author: Bernard Flury
 Maintainer: Paul Hewson <paul.hewson@plymouth.ac.uk>
-Description: Contains data sets from Bernard Flury (1997) A First Course in Multivariate Statistics, Springer NY
-License: GPL Version 2 (or later)
-Packaged: Mon Oct  8 21:09:34 2007; paul
+Description: Contains data sets from Bernard Flury (1997) A First
+        Course in Multivariate Statistics, Springer NY
+License: GPL (>= 2)
+Packaged: 2012-10-29 08:57:04 UTC; ripley
+Repository: CRAN
+Date/Publication: 2012-10-29 08:57:04
