--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: Flury
 Type: Package
-Version: 0.1-1
+Version: 0.1-2
 Title: Data Sets from Flury, 1997
 Requires: MASS
-Date: 2006-06-15
+Date: 2007-10-08
 Author: Bernard Flury
 Maintainer: Paul Hewson <paul.hewson@plymouth.ac.uk>
 Description: Contains data sets from Bernard Flury (1997) A First Course in Multivariate Statistics, Springer NY
-License: To be used in association with Flury's book
-Packaged: Thu Jun 22 20:50:59 2006; hornik
+License: GPL Version 2 (or later)
+Packaged: Mon Oct  8 21:09:34 2007; paul
